GameOver com eventos - final da aula 3

--- a/principal.html
+++ b/principal.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Alura Typer</title>
+    <link rel="stylesheet" href="css/principal.css">
 </head>
 <body>
     <h1>Alura Typer</h1>
-    <p class="frase">AAA BBB CCC DDD</p>
+    <p class="frase"></p>
 
     <ul class="informacoes">
-        <li><span id="tamanho-frase">?????</span> palavras</li>
-        <li>2 segundos</li>
+        <li><span id="tamanho-frase">5</span> palavras</li>
+        <li><span id="tempo-digitacao">5</span> segundos</li>
     </ul>
 
     <textarea class="campo-digitacao" rows="8" cols="40"></textarea>
