--- a/principal.html
+++ b/principal.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Alura Typer</title>
+    <link rel="stylesheet" href="css/libs/materialize.min.css">
     <link rel="stylesheet" href="css/principal.css">
 </head>
 <body>
-    <h1>Alura Typer</h1>
-    <p class="frase"></p>
-
-    <ul class="informacoes">
-        <li><span id="tamanho-frase">5</span> palavras</li>
-        <li><span id="tempo-digitacao">5</span> segundos</li>
-    </ul>
-
-    <textarea class="campo-digitacao" rows="8" cols="40"></textarea>
-    <button id="botao-reiniciar">Reiniciar Jogo</button>
-    <ul>
-        <li><span id="contador-caracteres">0</span> caracteres</li>
-        <li><span id="contador-palavras">0</span> palavras</li>
-    </ul>
+    <div class="container">
+        <h1 class="center">Alura Typer</h1>
+        <p class="frase center">A frase explicando como funciona o jogo</p>
+    
+        <ul class="informacoes center">
+            <li><span id="tamanho-frase">5</span> palavras</li>
+            <li><span id="tempo-digitacao">5</span> segundos</li>
+        </ul>
+    
+        <textarea class="campo-digitacao" rows="8" cols="40"></textarea>
+        <button id="botao-reiniciar">Reiniciar Jogo</button>
+        <ul class="center">
+            <li><span id="contador-caracteres">0</span> caracteres</li>
+            <li><span id="contador-palavras">0</span> palavras</li>
+        </ul>
+    </div>   
 
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
